# framspy-fork

./: .gitignore  FramsticksCLI.py  FramsticksEvolution.py  FramsticksLib.py  FramsticksLibCompetition.py  LICENSE-Framsticks-SDK.txt  README.md  frams-test-props.py  frams-test.py  frams.py  frams.pyi  frams_test.py  generate_frams_pyi_from_framscript_pydantic_xml.py  pyproject.toml  ruff.toml  run-evolalg-examples.cmd  run-evolalg_steps-examples.cmd
dissimilarity/: alignmodel.py
framsfiles/: _context.py
framsfiles/reader/: _all.py
framsfiles/writer/: __init__.py  _loader.py  _parser.py  _serializer.py
